Задание 23 - рефакторинг + Доработана форма загрузки изображений

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
                   <div class="img-upload__field-wrapper">
-                    <input class="text__hashtags" name="hashtags" id="hashtags" placeholder="#ХэшТег" maxlength="104" minlength="2" required>
+                    <input class="text__hashtags" name="hashtags" id="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
                     <textarea class="text__description" name="description" id="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
@@ -233,8 +233,8 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="js/main.js" type="module"></script>
   <script src="pristine/pristine.min.js"></script>
   <script src="nouislider/nouislider.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
